--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Planora.ai - Your AI-Powered Travel Assistant</title>
     <meta name="description" content="Planora.ai redefines travel planning with conversational AI, delivering personalized flight and accommodation packages in minutes, not hours." />
     <!-- Content Security Policy to allow necessary operations for Supabase Auth -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.gpteng.co https://*.supabase.co; connect-src 'self' https://*.supabase.co; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; frame-src 'self' https://*.supabase.co https://accounts.google.com; base-uri 'self'; form-action 'self'; object-src 'none';" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.gpteng.co https://*.supabase.co; connect-src 'self' https://*.supabase.co; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https:; frame-src 'self' https://*.supabase.co https://accounts.google.com; base-uri 'self'; form-action 'self'; object-src 'none';" />
     <meta name="author" content="Planora.ai" />
 
     <meta property="og:title" content="Planora.ai - Your AI-Powered Travel Assistant" />
