🚀 FORCE CACHE BUST: Aggressive cache invalidation
- Added timestamp-based file names in build
- Added aggressive no-cache headers in _headers and HTML
- Removed frame-ancestors from meta CSP (doesn't work there)
- Added cache-busting meta tags
- This should force Cloudflare to serve fresh files

New build files have timestamp: 1750956570385
Old problematic file: ui-components-C2a0S7bz.js
New file: ui-components-BcmJ9nhX-1750956570385.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planora.ai - Your AI-Powered Travel Assistant</title>
     <meta name="description" content="Planora.ai redefines travel planning with conversational AI, delivering personalized flight and accommodation packages in minutes, not hours." />
+    <!-- Cache Busting Headers -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <!-- Primary Content Security Policy -->
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self';
@@ -19,7 +23,6 @@
       object-src 'none';
       base-uri 'self';
       form-action 'self';
-      frame-ancestors 'none';
       upgrade-insecure-requests;
     ">
     <meta name="author" content="Planora.ai" />
